# arson

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  rustfmt.toml
arson/: Cargo.toml
arson-testapp/: Cargo.toml
arson-testapp/run/: main.dta
arson-testapp/src/: main.rs
arson/src/: error.rs  lib.rs  value.rs
arson/src/builtin/: flow.rs  mod.rs  operators.rs
arson/src/context/: context.rs  flow.rs  mod.rs  operators.rs
arson/src/core/: array.rs  context.rs  error.rs  mod.rs  node.rs  object.rs  parse.rs  symbol.rs  variable.rs
arson/src/core/builtin/: arithmetic.rs  math.rs  mod.rs  operators.rs
arson/src/fs/: driver.rs  filesystem.rs  mod.rs  path.rs
arson/src/fs/drivers/: basic.rs  mock.rs  mod.rs
arson/src/parse/: lexer.rs  loader.rs  mod.rs  parser.rs
arson/src/parse/test_files/: merge.dta  thorough.dta
arson/src/stdlib/: io.rs  math.rs  mod.rs
crates/arson/: Cargo.toml
crates/arson-core/: Cargo.toml  build.rs
crates/arson-core/src/: context.rs  error.rs  lib.rs  loader.rs
crates/arson-core/src/builtin/: array.rs  flow.rs  function.rs  mod.rs  numeric.rs  operator.rs  operators.rs  string.rs  value.rs  variable.rs
crates/arson-core/src/primitives/: array.rs  function.rs  mod.rs  node.rs  numbers.rs  object.rs  string.rs  symbol.rs  variable.rs
crates/arson-core/src/primitives/array/: array.rs  concat.rs  display.rs  error.rs  find.rs  index.rs  macros.rs  mod.rs  ref.rs  slice.rs  util.rs
crates/arson-core/src/primitives/node/: default.rs  intern.rs  kind.rs  mod.rs  node.rs  value.rs
crates/arson-core/src/primitives/string/: mod.rs  table.rs
crates/arson-core/src/primitives/symbol/: mod.rs  symbol.rs  table.rs
crates/arson-dtb/: Cargo.toml
crates/arson-dtb/src/: convert.rs  lib.rs  read.rs  write.rs
crates/arson-dtb/src/crypt/: mod.rs  new.rs  noop.rs  old.rs
crates/arson-dtb/tests/: main.rs
crates/arson-fmtlib/: Cargo.toml
crates/arson-fmtlib/src/: consts.rs  expr.rs  lib.rs  token.rs
crates/arson-fmtlib/tests/: basic.rs  expr.rs  main.rs  token.rs
crates/arson-fs/: Cargo.toml
crates/arson-fs/src/: driver.rs  filesystem.rs  lib.rs  path.rs
crates/arson-fs/src/drivers/: basic.rs  mock.rs  mod.rs
crates/arson-parse/: Cargo.toml
crates/arson-parse/src/: core_shim.rs  diagnostics.rs  encoding.rs  lexer.rs  lib.rs  loader.rs  parser.rs
crates/arson-parse/src/test_files/: thorough.dta
crates/arson-parse/tests/test_files/: thorough.dta  thorough_errors.dta
crates/arson-parse/tests/thorough/: lexer.rs  main.rs  parser.rs
crates/arson-stdlib/: Cargo.toml
crates/arson-stdlib/src/: fs.rs  io.rs  lib.rs  math.rs  options.rs  process.rs  random.rs  state.rs  stdio.rs
crates/arson/src/: lib.rs
examples/: LICENSE-APACHE
examples/diagnostics/: Cargo.toml
examples/diagnostics/examples/: diagnostics.rs
examples/diagnostics/run/: fail.dta  success.dta
examples/hello-world/: Cargo.toml  main.rs
examples/hello-world/examples/: hello-world.rs
examples/hello-world/run/: main.dta
src/: lib.rs
tools/arson-fmt/: Cargo.toml
tools/arson-fmt/src/: lib.rs  main.rs
tools/arson-fmt/tests/: basic.rs
tools/arson-fmt/tests/test_files/: thorough.dta  thorough_target.dta
tools/arson-repl/: Cargo.toml
tools/arson-repl/src/: main.rs  terminal.rs  util.rs
tools/arson-run/: Cargo.toml
tools/arson-run/src/: main.rs
tools/arsonc/: Cargo.toml
tools/arsonc/src/: main.rs
