[package]
name = "arson-core"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# Due to the proprietary origins of the language this library seeks to implement,
# it's probably best not to allow it to be published to any registries.
# Additionally, the name conflicts with existing packages, and so a different
# name would need to be picked in the case where it does get published.
publish = false

[features]
default = ["text-loading", "dynamic-typenames"]

file-system = ["dep:arson-fs"]

text-loading = ["dep:arson-parse"]
file-loading = ["text-loading", "file-system"]

dynamic-typenames = []

[dependencies]
arson-parse = { path = "../arson-parse", optional = true }
arson-fs = { path = "../arson-fs", optional = true }

thiserror = "1.0.65"
