[package]
name = "arson-parse"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

publish = false

[dependencies]
arson-core = { version = "0.1.0", path = "../arson-core" }
arson-fs = { version = "0.1.0", path = "../arson-fs" }

codespan-reporting = "0.11.1"
lazy-regex = "3.3.0"
logos = { version = "0.14.2", features = ["forbid_unsafe"] }
thiserror = "1.0.65"
