[package]
name = "arson-parse"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

publish = false

[features]
loading = ["dep:arson-core", "dep:arson-fs"]
reporting = ["dep:codespan-reporting"]

[dependencies]
arson-core = { version = "0.1.0", path = "../arson-core", optional = true }
arson-fs = { version = "0.1.0", path = "../arson-fs", optional = true }

codespan-reporting = { version = "0.11.1", optional = true }
lazy-regex = "3.3.0"
logos = { version = "0.14.2", features = ["forbid_unsafe"] }
thiserror = "1.0.65"
