[package]
name = "arson-stdlib"
version = "0.1.0"
edition.workspace = true
license.workspace = true

publish = false

[dependencies]
arson-core = { version = "0.1.0", path = "../arson-core" }
arson-fs = { version = "0.1.0", path = "../arson-fs" }
arson-parse = { version = "0.1.0", path = "../arson-parse" }

thiserror = "1.0.65"
