[package]
name = "arson-stdlib"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

publish = false

[dependencies]
arson-core = { path = "../arson-core", features = ["file-loading"] }
arson-fs = { path = "../arson-fs" }
squirrel3-rs = "0.1.2"

thiserror = "1.0.65"
