[package]
name = "arson"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
parse-reporting = ["arson-parse/reporting"]

[dependencies]
arson-core = { version = "0.1.0", path = "../arson-core", features = ["file-loading"] }
arson-fs = { version = "0.1.0", path = "../arson-fs" }
arson-parse = { version = "0.1.0", path = "../arson-parse" }
arson-stdlib = { version = "0.1.0", path = "../arson-stdlib" }
