[package]
name = "arson"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
parse-reporting = ["arson-parse/reporting"]

[dependencies]
arson-core = { path = "../arson-core", features = ["file-loading"] }
arson-fs = { path = "../arson-fs" }
arson-parse = { path = "../arson-parse" }
arson-stdlib = { path = "../arson-stdlib" }
