[package]
name = "arson-repl"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

publish = false

[dependencies]
arson = { path = "../../crates/arson", features = ["parse-reporting"] }

clap = { version = "4.5.23", features = ["derive"] }
rustyline = "15.0.0"
