[package]
name = "arsonc"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

publish = false

[dependencies]
anyhow = "1.0.95"
arson-dtb = { path = "../../crates/arson-dtb", features = ["token-conversion"] }
arson-parse = { path = "../../crates/arson-parse", features = ["reporting"] }

clap = { version = "4.5.23", features = ["derive"] }
