[package]
name = "arsonc"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

publish = false

[dependencies]
arson-dtb = { path = "../../crates/arson-dtb", features = ["token-conversion"] }
arson-fmtlib = { path = "../../crates/arson-fmtlib" }
arson-parse = { path = "../../crates/arson-parse", features = ["reporting"] }

anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
